--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^1.7.7",
     "express": "^4.21.0",
-    "http-proxy-middleware": "^3.0.3"
+    "http-proxy-middleware": "^3.0.3",
+    "pino-http": "^10.3.0",
+    "prom-client": "^15.1.3",
+    "response-time": "^2.3.2"
   }
 }
