--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.4",
     "axios": "^1.7.7",
     "express": "^4.21.0",
     "http-proxy-middleware": "^3.0.3",
     "pino-http": "^10.3.0",
     "prom-client": "^15.1.3",
+    "rabbitmq-stream-js-client": "^0.4.2",
     "response-time": "^2.3.2"
   }
 }
